CHanged the h1, h2 color from white to lighter shade of purple!

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
 
 /*The header*/
 header {
-    background-color: purple;
-    color: white; /* To make text readable */
+    background-color: #1e0038;
+    color: white;
     padding: 20px;
     text-align: center;
+}
+
+/*the h's*/
+h1, h2 {
+    color: #a060ff;
 }
