--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,16 @@ body {
     padding: 0;
 }
 
+/* sections */
+section {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #121212;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(160, 96, 255, 0.2);
+}
+
 /* contacts */
 a {
     color: #a060ff;
